Fix menu being broken in mobile

--- a/restaurants/static/src/sass/menu.scss
+++ b/restaurants/static/src/sass/menu.scss
@@ -136,7 +136,6 @@ textarea {
 }
 
 .menu-items {
-  min-width: 500px;
   min-height: 5px;
 }
 
